src/components/listening/Listening.scss
.listening {
    background-repeat: no-repeat;
    background-size: 100vw 100vh;
    height: 100vh;
    width: 100vw;
}

.back {
    transform: rotate(-90deg);
    position: fixed;
    left: -10em;
    bottom: 50vh;
    letter-spacing: 1.3em;
    color: white;
    font-size: 2.5vh;
    font-weight: bolder;
    width: max-content;

    &:hover {
        color: yellow;
    }
}

.wavesurfer {
    position: absolute;
    left: 50%;
    top: 85%;
    transform: translate(-50%, -50%);
}

.song_title {
    position: fixed;
    left: 50vw;
    bottom: 25vh;
    transform: translate(-50%, -50%);
    letter-spacing: 1.3vw;
    color: white;
    font-size: 2.5vh;
    font-weight: bolder;
    text-align: center;
}

.media-2 {
    position: fixed;
    display: inline-flex;
    justify-content: space-around;
    left: 4vw;
    top: 2.5vh;
    // width: 250px;
    width: 250px;
    padding-right: 6em;

    img {
        position: absolute;
    }

    .apple {
        width: 35px;

        .top {
            width: 35px;
        }

        .bottom {
            visibility: hidden;
            width: 35px;
        }
        
        &:hover {
            .top {
                visibility: hidden;
            }

            .bottom {
                visibility: visible;
                width: 35px;
            }
        }
    }
    .spotify {
        width: 35px;

        .top {
            width: 35px;
        }

        .bottom {
            visibility: hidden;
            width: 35px;
        }
        
        &:hover {
            .top {
                visibility: hidden;
            }

            .bottom {
                visibility: visible;
                width: 35px;
            }
        }
    }
    .instagram {
        width: 35px;

        .top {
            width: 35px;
        }

        .bottom {
            visibility: hidden;
            width: 35px;
        }
        
        &:hover {
            .top {
                visibility: hidden;
            }

            .bottom {
                visibility: visible;
                width: 35px;
            }
        }
    }
    .youtube {
        width: 35px;

        .top {
            width: 35px;
        }

        .bottom {
            visibility: hidden;
            width: 35px;
        }
        
        &:hover {
            .top {
                visibility: hidden;
            }

            .bottom {
                visibility: visible;
                width: 35px;
            }
        }
    }
    .twitter {
        width: 35px;

        .top {
            width: 35px;
        }

        .bottom {
            visibility: hidden;
            width: 35px;
        }
        
        &:hover {
            .top {
                visibility: hidden;
            }

            .bottom {
                visibility: visible;
                width: 35px;
            }
        }
    }

}

@media screen and (max-width: 500px) {
    .media-2 {
        position: fixed;
        left: 60%;
        transform: translate(-50%, 0);
    }
}

@media screen and (max-width: 1191px) {
    .listening {
        background-size: 120vw 100vh;
    }
}

@media screen and (max-width: 750px) {
    .listening {
        background-size: 130vw 100vh;
    }
}

@media screen and (max-width: 500px) {
    .listening {
        background-size: 150vw 100vh;
    }
}

